k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-k8s
  labels:
    name: portfolio-k8s
    project: kubernetes-deployment-lab
