k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: portfolio-k8s
  labels:
    app: backend
    project: kubernetes-deployment-lab
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
